# openclaw-config-backup

./: .gitignore  README.md
memory/: telegram.sqlite
voice_agent/: hey_jarvis_v0.1.onnx  test_oww.py  wake_test_oww.py  wake_test_whisper.py  wake_upgraded.py
workspace/: .env  .env.local  .gitignore  AGENTS.md  CLAWLINK_AI_POWER_SOP.md  IDENTITY.md  MEMORY.md  ONBOARDING.md  PROJECTS_SOP.md  PROJECT_STARTUP_MEMORY.md  PROJECT_depth_camera_plan.md  PROMPT_CACHE_FIX_2026-04-12.md  SESSION-STATE.md  SOP_Performance_Check.md  SOUL.md  TOOLS.md  all_memories.txt  analyze_cam.py  analyze_cam_urllib.py  attach_cdp_issue_note.txt  auto_calibrate.py  bare_metal_test.py  basic_move_test.py  calib_move_x.py  calib_move_y.py  (+170 more)
workspace/split-upload-douyin-crawler-force/: .gitignore  README.md  pyproject.toml
workspace/split-upload-douyin-crawler-force/app/: db.py  models.py
workspace/split-upload-douyin-crawler-force/app/core/: config.py
workspace/split-upload-douyin-crawler-force/app/routers/: __init__.py  comments.py  douyin.py  outreach.py
workspace/split-upload-douyin-crawler-force/app/services/: __init__.py  douyin_collector.py
workspace/split-upload-douyin-crawler-force/app/static/: app.css  app.js
workspace/split-upload-douyin-crawler-force/examples/: comments_import.csv
workspace/split-upload-douyin-crawler-force/lead_ops_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workspace/split-upload-douyin-crawler-force/scripts/: import_comments.py  start_server.sh  stop_server.sh
workspace/split-upload-douyin-crawler-force/tests/: test_douyin_utils.py
(+12681 files in other folders)
