[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-ops-backend"
version = "0.1.0"
description = "Baba precise traffic acquisition tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlmodel>=0.0.22,<0.1",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
